# tui_pdf

./: Cargo.toml  LICENSE  README.md  install-deps.sh  install.sh
src/: config.rs  content.rs  document.rs  error.rs  lib.rs  links.rs  main.rs  renderer.rs  search.rs  synctex.rs  toc.rs  web.rs  widget.rs  zotero.rs
