[package]
name = "tui_pdf"
version = "0.1.0"
edition = "2024"

[lib]
name = "tui_pdf"
path = "src/lib.rs"

[[bin]]
name = "tui-pdf"
path = "src/main.rs"

[dependencies]
mupdf = "0.4"
ratatui = { version = "0.29", features = ["crossterm"] }
ratatui-image = { version = "4.2", features = ["crossterm"] }
crossterm = "0.28"
image = "0.25"
thiserror = "2"
