[package]
name = "tui_pdf"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "tui_pdf"
path = "src/lib.rs"

[[bin]]
name = "tui-pdf"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
mupdf = "0.6"
ratatui = { version = "0.30", features = ["crossterm"] }
ratatui-image = { version = "10", features = ["crossterm"] }
crossterm = "0.29"
image = "0.25"
thiserror = "2"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
headless_chrome = "1"
